second-ingress-controller-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller-external
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-external
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: controller-external
          image: registry.k8s.io/ingress-nginx/controller:v1.9.3
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-external
            - --ingress-class=nginx-external
            - --controller-class=k8s.io/ingress-nginx-external
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
