service-for-second-ingress-controller.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-external
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx-external
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
